Domainname change to deltaq.io

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deltaq",
-  "HomePage": "https://deltaq-gatsby.netlify.com/",
-  "description": "Deltaq initial dev",
+  "HomePage": "https://deltaq.io/",
+  "description": "DeltaQ website",
   "version": "1.0.0",
   "repository": {
     "type": "git",
