--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -6,12 +6,12 @@ socialMediaCard:
   image: ''
 googleTrackingId: UA-146931340-1
 address: |-
-  Kalkkaai 6
+  Antwerpselaan 40
 
   1000-Brussel
 
   Belgium
 email: info@deltaQ.io
-phone: +32 (0) 2 217 58 68
+phone: +32 (0) 491 568 268
 linkedin: 'https://www.linkedin.com/company/deltaq-io/'
 twitter: 'https://twitter.com/DeltaQ_io'
